syntax = "proto3";

package sec07;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.example.models.sec07";


message RequestSize{
  int32 size = 1;
}
message Output{
  int32 value = 1;
}


service FlowControlService{
  rpc GetMessages(stream RequestSize) returns (stream Output);
}